--- a/README
+++ b/README
@@ -60,7 +60,7 @@ Any further questions:
 ======================
 
 For any further questions, please reach out to me either via email
-at davis123watts4@outlook.com, or via Discord at no#4880.
+at AprilM112@protonmail.com, or via Discord at no#4880.
 
 
 Disclaimer:
