--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This project is currently dead for a variety of reasons, all of them being that I completely fucking forgot about it. 
+Might come back to it in the future if I have any motivation to, but it really doesn't make much sense to if I don't have a PPC64le system to actually test on. 
+RCS said they shipped the test kit, and then never responded to another email :(
+
 #################################
  _  _    _ _  _                         _        _     _      
 | || |  / | || |        _   _ _ __  ___| |_ __ _| |__ | | ___ 
